  and processes into Grammar object. Does not geneate code.  Use
  Grammar.getImplicitLexer() to get the lexer created during processing of
  combined grammar.

* Added Grammar.load(fileName) that creates Tool object for you. loadGrammar()
  lets you create your own Tool for setting error handlers etc...

	final Grammar g = Grammar.load("/tmp/MyGrammar.g4");

December 19, 2013

* Sam:
	Improved documentation for tree patterns classes
    Refactored parts of the tree patterns API to simplify classes and improve encapsulation
    Move ATN serializer to runtime
    Use ATNDeserializer methods instead of ATNSimulator methods which are now deprecated

* parrt: fix null pointer bug with rule "a : a;"

November 24, 2013

* Ter adds tree pattern matching.  Preferred interface:

	ParseTree t = parser.expr();
	ParseTreePattern p = parser.compileParseTreePattern("<ID>+0", MyParser.RULE_expr);
	ParseTreeMatch m = p.match(t);
	String id = m.get("ID");

  or

	String xpath = "//blockStatement/*";
	String treePattern = "int <Identifier> = <expression>;";
	ParseTreePattern p =
		parser.compileParseTreePattern(treePattern,
									   JavaParser.RULE_localVariableDeclarationStatement);
	List<ParseTreeMatch> matches = p.findAll(tree, xpath);

November 20, 2013

* Sam added method stuff like expr() that calls expr(0). Makes it possible
  to call expr rule from TestRig (grun).

November 14, 2013

* Added Sam's ParserInterpreter implementation that uses ATN after
  deserialization.

	LexerGrammar lg = new LexerGrammar(
		"lexer grammar L;\n" +
  		"A : 'a' ;\n" +
  		"B : 'b' ;\n" +
  		"C : 'c' ;\n");
  	Grammar g = new Grammar(
  		"parser grammar T;\n" +
  		"s : (A{;}|B)* C ;\n",
  		lg);

	LexerInterpreter lexEngine = lg.createLexerInterpreter(new ANTLRInputStream(input));
	CommonTokenStream tokens = new CommonTokenStream(lexEngine);
	ParserInterpreter parser = g.createParserInterpreter(tokens);
	ParseTree t = parser.parse(g.rules.get(startRule).index);

November 13, 2013
